# IFEM-ShellEx

./: .gitignore  ASMu2DNastran.C  ASMu2DNastran.h  AndesShell.C  AndesShell.h  CMakeLists.txt  HasPointLoads.C  HasPointLoads.h  IFEMNastranReader.C  IFEMNastranReader.h  README.md  SIMAndesShell.C  SIMAndesShell.h  SIMAndesSplit.C  SIMAndesSplit.h  SIMShellModal.C  SIMShellModal.h  SIMShellSup.C  SIMShellSup.h  WaveFunc.C  WaveFunc.h  main.C  main_pcloud.C
ANDES/: IFEM_wrapper.f90  andes4ShellModule.f90  manipMatrixModule.f90  pmatStiff.f90  qbek35.f  qmrf35.f  strainAndStressUtils.f90  teba35.f  tmrf35.f  wavgmConstrEqn.f90
FFlLib/: CMakeLists.txt  FFlCrossSection.C  FFlElementBase.C  FFlElementBase.H  FFlFENodeRefs.H  FFlGroup.C  FFlGroup.H  FFlGroupBase.H  FFlLinkHandler.C  FFlLinkHandler.H  FFlLoadBase.H  FFlNastranProcessor.C  FFlNastranReader.C  FFlNastranReader.H  FFlNastranResolver.C  FFlNodeGroup.C  FFlNodeGroup.H  FFlPartBase.H  FFlReaders.H  FFlReference.H  FFlUtils.C  FFlUtils.H
FFlLib/FFaLib/FFaAlgebra/: FFaCheckSum.H  FFaUnitCalculator.H
FFlLib/FFlFEParts/: FFlLoads.H  FFlPLOAD.H  FFlQUAD4.C  FFlRGD.C
Test/: BeamOnly-box.nas  BeamOnly-box.xinp  BeamOnly-dyn.reg  BeamOnly.nas  BeamOnly.reg  BeamOnly.xinp  DroppedBox.reg  DroppedBox.vreg  DroppedBox.xinp  FEM_Fine.nas  Fine-dump.reg  Fine-dump.xinp  Fine-dyn.reg  Fine-load.reg  Fine-load.xinp  Fine-mlc.reg  Fine-partial.reg  Fine-partial.xinp  Fine.reg  Fine.xinp  L-beam10.nas  L-beam10.reg  L-beam10.xinp  LoadTest.reg  LoadTest.xinp  Q4-dyn.reg  Q4-dynp.reg  Q4-dynp.xinp  Q4-generated.reg  Q4-generated.xinp  Q4-sup.reg  Q4-sup.vreg  Q4-sup.xinp  Q4.reg  Q4.vreg  Q4.xinp  Q4andBeam-sup.reg  Q4andBeam-sup.xinp  Q4andBeam.nas  Q4andBeam.reg  (+21 more)
Test/superelms/: CQUAD04__SAM.fsm  Q4andBeam_B.fmx  Q4andBeam_G.fmx  Q4andBeam_M.fmx  Q4andBeam_S.fmx  Q4andBeam_SAM.fsm
doc/: Doxyfile.in  ShellSim.dox.in
jenkins/: build.sh
