CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
STRING(REGEX REPLACE " -DepsZ=[0-9\.]*e-[0-9]*" "" CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS})
STRING(APPEND CMAKE_CXX_FLAGS_DEBUG " -DFFL_DEBUG=2")
FILE(GLOB FFL_SOURCES *.C FFlFEParts/*.C FFaLib/FFa*/*.C)
FILE(GLOB FFL_HEADERS *.H FFlFEParts/*.H FFaLib/FFa*/*.H)
ADD_LIBRARY(FFlLib ${FFL_SOURCES})
