CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
IF(VERBOSE_DEBUG GREATER 12)
  MATH(EXPR FFL_DEBUG "${VERBOSE_DEBUG} - 10")
ELSEIF(VERBOSE_DEBUG GREATER 1)
  SET(FFL_DEBUG 2)
ELSE()
  SET(FFL_DEBUG 0)
ENDIF()
IF(FFL_DEBUG GREATER 0)
  STRING(APPEND CMAKE_CXX_FLAGS_DEBUG " -DFFL_DEBUG=${FFL_DEBUG} -DFFA_DEBUG")
ENDIF()
STRING(REGEX REPLACE " -DepsZ=[0-9\.]*e-[0-9]*" "" CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS})
FILE(GLOB FFL_SOURCES *.C FFlFEParts/*.C FFaLib/FFa*/*.C)
FILE(GLOB FFL_HEADERS *.H FFlFEParts/*.H FFaLib/FFa*/*.H)
ADD_LIBRARY(FFlLib ${FFL_SOURCES})
